@@ -1,3 +1,8 @@
+2011-09-12  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* win/tclWinPort.h: [Bug 3407070] tclPosixStr.c won't build with
+	EOVERFLOW==E2BIG
+
 2011-09-06  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* generic/tcl.decls: Tcl_HashStats does not return a CONST
